--- a/stardog-api/package.json
+++ b/stardog-api/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "nodemon src/main/index.js.old"
+    "start": "nodemon ./src/main/index.js"
   },
   "author": "",
   "license": "ISC",
